Update hexagonal to quadratic to work better
Now actually keeps the neighbor information better, it seems, the hexagonal clump is kept from the preprocess_facttools


Former-commit-id: 908a935e5facc395a3cb2540ed07b16212fe0465

--- a/FACTsourceFinding/Plotting_3D_Camera_Image.ipynb
+++ b/FACTsourceFinding/Plotting_3D_Camera_Image.ipynb
@@ -28,7 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "id_position = pickle.load(open('../../hexagonal_to_quadratic_mapping_dict.p', \"rb\"))\n",
+    "id_position = pickle.load(open(\"/run/media/jacob/SSD/Development/thesis/jan/07_make_FACT/hexagonal_to_quadratic_mapping_dict.p\", \"rb\"))\n",
     "path_build = '/home/jbehnken/07_make_FACT/build/'\n",
     "\n",
     "path_raw_mc = '/net/big-tank/POOL/projects/fact/simulation/photon_stream/fact_tools/v.0.18.0/gamma_gustav_12/'\n",
